@@ -4,7 +4,7 @@
 <p>
 <a href="https://github.com/christbowel/osdc/actions/workflows/daily.yml"><img src="https://github.com/christbowel/osdc/actions/workflows/daily.yml/badge.svg" alt="Analysis"></a>
 <a href="https://github.com/christbowel/osdc/actions/workflows/render.yml"><img src="https://github.com/christbowel/osdc/actions/workflows/render.yml/badge.svg" alt="Render"></a>
-<a href="https://christbowel.github.io/OSDC"><img src="https://img.shields.io/badge/advisories-1742-blue" alt="Advisories"></a>
+<a href="https://christbowel.github.io/OSDC"><img src="https://img.shields.io/badge/advisories-1766-blue" alt="Advisories"></a>
 <a href="https://christbowel.github.io/OSDC"><img src="https://img.shields.io/badge/patterns-50-purple" alt="Patterns"></a>
 </p>
 <p>
@@ -15,7 +15,7 @@
 <h3>GHSA-x2rj-828p-hx9m</h3>
 <p>
 <code>CRITICAL 10.0</code> · 2026-08-21 · Python<br>
-<code>xinference</code> · Pattern: <code>UNSANITIZED_INPUT→COMMAND</code> · 85x across ecosystem
+<code>xinference</code> · Pattern: <code>UNSANITIZED_INPUT→COMMAND</code> · 87x across ecosystem
 </p>
 <p><b>Root cause</b> : The application used the unsafe `eval()` function to parse tool-call arguments from untrusted model outputs. An attacker could craft a malicious string that, when evaluated by `eval()`, would execute arbitrary Python code on the server.</p>
 <p><b>Impact</b> : An attacker could achieve full remote code execution on the server hosting the Xinference application, leading to complete system compromise.</p>
@@ -82,7 +82,7 @@
 <h3>GHSA-p849-8hwh-84j9</h3>
 <p>
 <code>CRITICAL 10.0</code> · 2026-07-31 · JavaScript<br>
-<code>@nocobase/plugin-notification-in-app-message</code> · Pattern: <code>UNCLASSIFIED</code> · 507x across ecosystem
+<code>@nocobase/plugin-notification-in-app-message</code> · Pattern: <code>UNCLASSIFIED</code> · 516x across ecosystem
 </p>
 <p><b>Root cause</b> : </p>
 <p><b>Impact</b> : </p>
@@ -94,7 +94,7 @@
 <h3>GHSA-2956-977x-2w3r</h3>
 <p>
 <code>CRITICAL 10.0</code> · 2026-07-30 · Python<br>
-<code>flyto-core</code> · Pattern: <code>PATH_TRAVERSAL→FILE_WRITE</code> · 52x across ecosystem
+<code>flyto-core</code> · Pattern: <code>PATH_TRAVERSAL→FILE_WRITE</code> · 53x across ecosystem
 </p>
 <p><b>Root cause</b> : The application allowed an attacker to control both the target file path and its base directory when writing files. The existing path traversal check was ineffective because it validated the output path against a caller-supplied output directory, which an attacker could manipulate to bypass the check and write files outside the intended sandbox.</p>
 <p><b>Impact</b> : An attacker could write arbitrary files to any location on the file system where the application has write permissions, potentially leading to remote code execution, data corruption, or denial of service.</p>
@@ -152,7 +152,7 @@
 <h3>GHSA-f25v-x6vr-962g</h3>
 <p>
 <code>CRITICAL 10.0</code> · 2026-07-24 · PHP<br>
-<code>pheditor/pheditor</code> · Pattern: <code>MISSING_AUTH→ENDPOINT</code> · 55x across ecosystem
+<code>pheditor/pheditor</code> · Pattern: <code>MISSING_AUTH→ENDPOINT</code> · 56x across ecosystem
 </p>
 <p><b>Root cause</b> : The vulnerability existed because the application had a hardcoded default password &#39;admin&#39; which, when set, triggered a forced password change flow. During this flow, the application did not verify the current password provided by the user against the actual stored password. Instead, it only checked if the submitted password was &#39;admin&#39; (which was hardcoded into a hidden input field in the password change form), allowing an attacker to bypass authentication and set a new password without knowing the original one.</p>
 <p><b>Impact</b> : An attacker could completely bypass the authentication mechanism, gain administrative access to the Pheditor application, and potentially execute arbitrary code or modify files on the server, leading to full system compromise.</p>
@@ -297,7 +297,7 @@
 <h3>GHSA-v5px-423j-pf7p</h3>
 <p>
 <code>CRITICAL 10.0</code> · 2026-07-08 · Go<br>
-<code>github.com/nuclio/nuclio</code> · Pattern: <code>UNCLASSIFIED</code> · 507x across ecosystem
+<code>github.com/nuclio/nuclio</code> · Pattern: <code>UNCLASSIFIED</code> · 516x across ecosystem
 </p>
 <p><b>Root cause</b> : </p>
 <p><b>Impact</b> : </p>
@@ -367,7 +367,7 @@
 <h3>GHSA-c39w-43gm-34h5</h3>
 <p>
 <code>CRITICAL 10.0</code> · 2026-06-23 · Go<br>
-<code>gogs.io/gogs</code> · Pattern: <code>UNCLASSIFIED</code> · 507x across ecosystem
+<code>gogs.io/gogs</code> · Pattern: <code>UNCLASSIFIED</code> · 516x across ecosystem
 </p>
 <p><b>Root cause</b> : </p>
 <p><b>Impact</b> : </p>
@@ -379,7 +379,7 @@
 <h3>GHSA-76w7-j9cq-rx2j</h3>
 <p>
 <code>CRITICAL 10.0</code> · 2026-05-29 · JavaScript<br>
-<code>vm2</code> · Pattern: <code>UNCLASSIFIED</code> · 507x across ecosystem
+<code>vm2</code> · Pattern: <code>UNCLASSIFIED</code> · 516x across ecosystem
 </p>
 <p><b>Root cause</b> : </p>
 <p><b>Impact</b> : </p>
@@ -391,7 +391,7 @@
 <h3>GHSA-m4wx-m65x-ghrr</h3>
 <p>
 <code>CRITICAL 10.0</code> · 2026-05-29 · JavaScript<br>
-<code>vm2</code> · Pattern: <code>UNCLASSIFIED</code> · 507x across ecosystem
+<code>vm2</code> · Pattern: <code>UNCLASSIFIED</code> · 516x across ecosystem
 </p>
 <p><b>Root cause</b> : </p>
 <p><b>Impact</b> : </p>
@@ -403,7 +403,7 @@
 <h3>GHSA-rp36-8xq3-r6c4</h3>
 <p>
 <code>CRITICAL 10.0</code> · 2026-05-29 · JavaScript<br>
-<code>vm2</code> · Pattern: <code>UNCLASSIFIED</code> · 507x across ecosystem
+<code>vm2</code> · Pattern: <code>UNCLASSIFIED</code> · 516x across ecosystem
 </p>
 <p><b>Root cause</b> : The vm2 sandbox failed to properly denylist certain Node.js built-in modules and their subpaths, specifically &#39;process&#39; and &#39;inspector/promises&#39;. This allowed an attacker to bypass the sandbox&#39;s security mechanisms by requiring these modules, which provide direct access to host system capabilities.</p>
 <p><b>Impact</b> : An attacker could execute arbitrary code on the host system, completely escaping the sandbox environment and gaining full control over the application running the vm2 instance.</p>
@@ -448,7 +448,7 @@
 <h3>GHSA-v6mx-mf47-r5wg</h3>
 <p>
 <code>CRITICAL 10.0</code> · 2026-05-29 · JavaScript<br>
-<code>vm2</code> · Pattern: <code>UNCLASSIFIED</code> · 507x across ecosystem
+<code>vm2</code> · Pattern: <code>UNCLASSIFIED</code> · 516x across ecosystem
 </p>
 <p><b>Root cause</b> : </p>
 <p><b>Impact</b> : </p>
@@ -494,7 +494,7 @@
 <h3>GHSA-3258-qmv8-frp3</h3>
 <p>
 <code>CRITICAL 10.0</code> · 2026-05-08 · Go<br>
-<code>github.com/free5gc/smf</code> · Pattern: <code>MISSING_AUTH→ENDPOINT</code> · 55x across ecosystem
+<code>github.com/free5gc/smf</code> · Pattern: <code>MISSING_AUTH→ENDPOINT</code> · 56x across ecosystem
 </p>
 <p><b>Root cause</b> : The free5GC SMF&#39;s UPI management interface was not protected by any authentication middleware. This allowed unauthenticated requests to reach the underlying handlers for reading and writing topology information.</p>
 <p><b>Impact</b> : An unauthenticated attacker could perform read and write operations on the SMF&#39;s UPI topology, potentially disrupting network operations or gaining unauthorized access to sensitive network configuration.</p>
@@ -537,7 +537,7 @@
 <h3>GHSA-246w-jgmq-88fg</h3>
 <p>
 <code>CRITICAL 10.0</code> · 2026-04-22 · Go<br>
-<code>github.com/jkroepke/openvpn-auth-oauth2</code> · Pattern: <code>MISSING_AUTH→ENDPOINT</code> · 55x across ecosystem
+<code>github.com/jkroepke/openvpn-auth-oauth2</code> · Pattern: <code>MISSING_AUTH→ENDPOINT</code> · 56x across ecosystem
 </p>
 <p><b>Root cause</b> : The application incorrectly returned &#39;FUNC_SUCCESS&#39; even when a client&#39;s authentication was explicitly denied or an error occurred during the authentication process. This misinterpretation of the return code by OpenVPN led to clients being granted access despite failing authentication.</p>
 <p><b>Impact</b> : An attacker could gain unauthorized access to the VPN without providing valid credentials, effectively bypassing the entire authentication mechanism.</p>
@@ -561,7 +561,7 @@
 <h3>GHSA-gph2-j4c9-vhhr</h3>
 <p>
 <code>CRITICAL 10.0</code> · 2026-04-14 · PHP<br>
-<code>wwbn/avideo</code> · Pattern: <code>UNSANITIZED_INPUT→XSS</code> · 103x across ecosystem
+<code>wwbn/avideo</code> · Pattern: <code>UNSANITIZED_INPUT→XSS</code> · 104x across ecosystem
 </p>
 <p><b>Root cause</b> : The application&#39;s WebSocket broadcast relay allowed unauthenticated users to inject arbitrary JavaScript code into messages. Specifically, the &#39;autoEvalCodeOnHTML&#39; field and the &#39;callback&#39; field in WebSocket messages were not properly sanitized or validated before being relayed to other clients, which would then execute the injected code via client-side eval() sinks.</p>
 <p><b>Impact</b> : An attacker could achieve unauthenticated cross-user JavaScript execution, leading to session hijacking, data theft, defacement, or other malicious activities on the client-side for any user connected to the WebSocket.</p>
@@ -590,7 +590,7 @@
 <h3>GHSA-9cp7-j3f8-p5jx</h3>
 <p>
 <code>CRITICAL 10.0</code> · 2026-04-10 · Go<br>
-<code>github.com/daptin/daptin</code> · Pattern: <code>PATH_TRAVERSAL→FILE_WRITE</code> · 52x across ecosystem
+<code>github.com/daptin/daptin</code> · Pattern: <code>PATH_TRAVERSAL→FILE_WRITE</code> · 53x across ecosystem
 </p>
 <p><b>Root cause</b> : The application allowed user-supplied filenames and archive entry names to be used directly in file system operations (e.g., `filepath.Join`, `os.OpenFile`, `os.MkdirAll`) without sufficient sanitization. This enabled attackers to manipulate file paths using `../` sequences or absolute paths.</p>
 <p><b>Impact</b> : An unauthenticated attacker could write arbitrary files to arbitrary locations on the server&#39;s file system, potentially leading to remote code execution, data corruption, or denial of service. In the case of Zip Slip, files within an uploaded archive could be extracted outside the intended directory.</p>
@@ -751,7 +751,7 @@
 <h3>GHSA-c64q-hj4j-375f</h3>
 <p>
 <code>CRITICAL 9.9</code> · 2026-08-28 · Java<br>
-<code>org.yamcs:yamcs-core</code> · Pattern: <code>UNSANITIZED_INPUT→COMMAND</code> · 85x across ecosystem
+<code>org.yamcs:yamcs-core</code> · Pattern: <code>UNSANITIZED_INPUT→COMMAND</code> · 87x across ecosystem
 </p>
 <p><b>Root cause</b> : The Yamcs StreamSQL `LIKE` expression directly embedded user-controlled pattern strings into dynamically compiled Java code (via Janino) without proper escaping. This allowed an authenticated attacker to inject arbitrary Java code into the `LikeExpression`&#39;s `fillCode_getValueReturn` method.</p>
 <p><b>Impact</b> : An authenticated attacker could execute arbitrary code on the server, leading to full system compromise, data exfiltration, or denial of service.</p>
@@ -775,7 +775,7 @@
 <h3>GHSA-pfvc-3p5h-x7h6</h3>
 <p>
 <code>CRITICAL 9.9</code> · 2026-07-31 · Go<br>
-<code>github.com/pterodactyl/wings</code> · Pattern: <code>UNCLASSIFIED</code> · 507x across ecosystem
+<code>github.com/pterodactyl/wings</code> · Pattern: <code>UNCLASSIFIED</code> · 516x across ecosystem
 </p>
 <p><b>Root cause</b> : </p>
 <p><b>Impact</b> : </p>
@@ -787,7 +787,7 @@
 <h3>GHSA-mjqf-28ph-426h</h3>
 <p>
 <code>CRITICAL 9.9</code> · 2026-07-29 · Go<br>
-<code>github.com/kube-logging/logging-operator</code> · Pattern: <code>UNSANITIZED_INPUT→COMMAND</code> · 85x across ecosystem
+<code>github.com/kube-logging/logging-operator</code> · Pattern: <code>UNSANITIZED_INPUT→COMMAND</code> · 87x across ecosystem
 </p>
 <p><b>Root cause</b> : The logging operator was vulnerable to Fluentd configuration injection because it did not properly validate or escape user-provided input before incorporating it into Fluentd configuration files. Specifically, newline characters in directive names, types, IDs, labels, log levels, tags, and parameter names, as well as parameter values, could break out of the intended configuration structure, allowing an attacker to inject arbitrary Fluentd directives, including those that execute remote code.</p>
 <p><b>Impact</b> : An attacker could inject arbitrary Fluentd configuration, leading to remote code execution on the Fluentd pods managed by the logging operator. This could compromise the entire Kubernetes cluster where the operator is deployed.</p>
@@ -910,7 +910,7 @@
 <h3>GHSA-gx55-f84r-v3r7</h3>
 <p>
 <code>CRITICAL 9.9</code> · 2026-06-30 · Go<br>
-<code>github.com/fission/fission</code> · Pattern: <code>UNCLASSIFIED</code> · 507x across ecosystem
+<code>github.com/fission/fission</code> · Pattern: <code>UNCLASSIFIED</code> · 516x across ecosystem
 </p>
 <p><b>Root cause</b> : </p>
 <p><b>Impact</b> : </p>
@@ -944,7 +944,7 @@
 <h3>GHSA-v455-mv2v-5g92</h3>
 <p>
 <code>CRITICAL 9.9</code> · 2026-06-30 · Go<br>
-<code>github.com/fission/fission</code> · Pattern: <code>UNCLASSIFIED</code> · 507x across ecosystem
+<code>github.com/fission/fission</code> · Pattern: <code>UNCLASSIFIED</code> · 516x across ecosystem
 </p>
 <p><b>Root cause</b> : </p>
 <p><b>Impact</b> : </p>
@@ -956,7 +956,7 @@
 <h3>GHSA-wmgg-3p4h-48x7</h3>
 <p>
 <code>CRITICAL 9.9</code> · 2026-06-30 · Go<br>
-<code>github.com/fission/fission</code> · Pattern: <code>UNCLASSIFIED</code> · 507x across ecosystem
+<code>github.com/fission/fission</code> · Pattern: <code>UNCLASSIFIED</code> · 516x across ecosystem
 </p>
 <p><b>Root cause</b> : </p>
 <p><b>Impact</b> : </p>
@@ -968,7 +968,7 @@
 <h3>GHSA-9v98-6g37-x9g6</h3>
 <p>
 <code>CRITICAL 9.9</code> · 2026-06-26 · JavaScript<br>
-<code>@deepstream/server</code> · Pattern: <code>UNCLASSIFIED</code> · 507x across ecosystem
+<code>@deepstream/server</code> · Pattern: <code>UNCLASSIFIED</code> · 516x across ecosystem
 </p>
 <p><b>Root cause</b> : </p>
 <p><b>Impact</b> : </p>
@@ -980,7 +980,7 @@
 <h3>GHSA-qf6p-p7ww-cwr9</h3>
 <p>
 <code>CRITICAL 9.9</code> · 2026-06-23 · Go<br>
-<code>gogs.io/gogs</code> · Pattern: <code>UNCLASSIFIED</code> · 507x across ecosystem
+<code>gogs.io/gogs</code> · Pattern: <code>UNCLASSIFIED</code> · 516x across ecosystem
 </p>
 <p><b>Root cause</b> : </p>
 <p><b>Impact</b> : </p>
@@ -992,7 +992,7 @@
 <h3>GHSA-5pm9-r2m8-rcmj</h3>
 <p>
 <code>CRITICAL 9.9</code> · 2026-06-22 · PHP<br>
-<code>paymenter/paymenter</code> · Pattern: <code>UNCLASSIFIED</code> · 507x across ecosystem
+<code>paymenter/paymenter</code> · Pattern: <code>UNCLASSIFIED</code> · 516x across ecosystem
 </p>
 <p><b>Root cause</b> : The application allowed users to upload files via the EasyMDE editor in ticket creation and viewing forms. The `completeUpload` method in Livewire components directly stored these uploaded files without sufficient validation of their content or type, allowing an attacker to upload malicious executable files.</p>
 <p><b>Impact</b> : An attacker could upload a malicious file (e.g., a PHP script) to the server and then execute it, leading to full compromise of the server.</p>
@@ -1042,7 +1042,7 @@
 <h3>GHSA-jvc5-6g7q-c843</h3>
 <p>
 <code>CRITICAL 9.9</code> · 2026-06-09 · PHP<br>
-<code>pheditor/pheditor</code> · Pattern: <code>UNSANITIZED_INPUT→COMMAND</code> · 85x across ecosystem
+<code>pheditor/pheditor</code> · Pattern: <code>UNSANITIZED_INPUT→COMMAND</code> · 87x across ecosystem
 </p>
 <p><b>Root cause</b> : The application was directly embedding user-supplied input from the &#39;dir&#39; parameter into a shell command without proper sanitization. This allowed an attacker to inject arbitrary shell commands by manipulating the &#39;dir&#39; value.</p>
 <p><b>Impact</b> : An attacker could execute arbitrary operating system commands on the server, leading to full system compromise, data exfiltration, or denial of service.</p>
@@ -1178,6 +1178,148 @@
 <a href="https://github.com/advisories/GHSA-fqvv-jvhr-g5jc">Advisory</a> · <a href="https://github.com/ManoManoTech/firefighter-incident/commit/2586679e6f32c12d223668b73e98f4c4de7b771f">Commit</a>
 </p>
 <hr>
+<h3>GHSA-m4rf-3fr8-xwx3</h3>
+<p>
+<code>CRITICAL 9.8</code> · 2026-09-01 · Python<br>
+<code>nltk</code> · Pattern: <code>UNSANITIZED_INPUT→COMMAND</code> · 87x across ecosystem
+</p>
+<p><b>Root cause</b> : The vulnerability stemmed from an incomplete fix for a previous JVM argument injection issue. The `_validate_java_options` function, intended to sanitize JVM arguments, did not adequately restrict per-call options, allowing an attacker to inject dangerous JVM flags like `-XX:OnError` or `-D` system properties. This bypass enabled the execution of arbitrary commands or other malicious actions.</p>
+<p><b>Impact</b> : An attacker could achieve arbitrary command execution on the system running the NLTK application by injecting specially crafted JVM arguments. This could lead to full system compromise, data exfiltration, or denial of service.</p>
+<details>
+<summary>Diff</summary>
+<pre lang="diff">--- a/nltk/internals.py
++++ b/nltk/internals.py
+@@ -43,23 +59,64 @@
+     &#34;-xcomp&#34;,  # compile-only mode
+     &#34;-xmixed&#34;,  # mixed mode (JVM default)
+     &#34;-verbose&#34;,  # diagnostic output: -verbose:gc
+-    &#34;-xx:&#34;,  # advanced tuning:  -XX:+UseG1GC
++
+ ) 
+ 
+ _SAFE_JVM_EXACT = frozenset({&#34;-server&#34;, &#34;-client&#34;})
+ 
++# ``--add-modules &lt;module-list&gt;`` is required by CoreNLP on JDK 9-11 (a CoreNLP
++# dependency uses the JAXB module dropped from the default set). The value is a
++# comma-separated list of module names -- it names JDK modules, and because
++# ``--module-path`` / ``-p`` is NOT allowlisted it cannot point at attacker code.
++# Restrict the value to a plain module-list shape so nothing else rides through.
++_MODULE_LIST_RE = re.compile(r&#34;\A[A-Za-z0-9_.,-]+\Z&#34;)
++
++# Every flag the allowlist accepts (heap/stack sizing, -verbose, -server/-client,
++# --add-modules) is a single simple token; none contains whitespace or a shell
++# metacharacter. Rejecting those characters is therefore a free, name-agnostic
++# defense-in-depth layer (it has no false positives now that -D, whose values may
++# legitimately contain them, is not accepted): e.g. a malformed ``-Xmx512m ; rm``
++# token cannot ride through on the ``-xmx`` prefix.
++_UNSAFE_OPTION_CHARS = frozenset(&#34; \t\r\n;|&amp;$`&lt;&gt;()[]*?!&#39;\&#34;\\&#34;)
+ 
+ def _validate_java_options(options):
+     &#34;&#34;&#34;
+-    Raise ValueError if *options* contains JVM flags that can change
+-    the executed program, load agents, or expand argument files.
+-
+-    Uses an allowlist of safe JVM memory/tuning flags that NLTK&#39;s Java
+-    wrapper is known to need.  This is intentionally stricter than a
+-    denylist so that -jar, @argfile, and future dangerous flags are
+-    rejected without needing to be enumerated (CVE-2026-12841, CWE-88).
++    Raise ValueError if *options* contains JVM flags that can change the
++    executed program, run a command, load agents, or expand argument files.
++
++    Uses a minimal allowlist of exactly the flags NLTK&#39;s Java wrappers and the
++    Stanford CoreNLP documentation use (heap/stack sizing, -verbose,
++    -server/-client, and ``--add-modules``). This is intentionally stricter than
++    a denylist so that -jar, @argfile, ``-XX:OnError=&lt;cmd&gt;``, dangerous ``-D``
++    system properties, and future dangerous flags are all rejected without
++    needing to be enumerated (CVE-2026-12841, CWE-88). Applications needing an
++    unlisted flag use ``java(..., trusted_raw_options=[...])``.
+     &#34;&#34;&#34;
+-    for flag in options:
++    opts = list(options)
++    i = 0
++    while i &lt; len(opts):
++        flag = opts[i]
++
++        # A JVM flag is a non-empty string; anything else cannot be reasoned
++        # about safely, so reject it rather than call .lower() on it.
++        if not isinstance(flag, str) or not flag:
++            raise ValueError(
++                f&#34;java_options contains an invalid (non-string or empty) entry: &#34;
++                f&#34;{flag!r} (CVE-2026-12841, CWE-88).&#34;
++            )
++
++        # Shape guard: no legitimate allowed flag contains whitespace, a control
++        # character, or a shell metacharacter; reject any that does.
++        if any(
++            c.isspace() or ord(c) &lt; 0x20 or ord(c) == 0x7F or c in _UNSAFE_OPTION_CHARS
++            for c in flag
++        ):
++            raise ValueError(
++                f&#34;java_options contains whitespace, a control character, or a &#34;
++                f&#34;shell metacharacter, which a valid JVM flag never does: &#34;
++                f&#34;{flag!r} (CVE-2026-12841, CWE-88).&#34;
++            )
++
+         n = flag.lower()
+ 
+         # @argfile references are expanded by the Java launcher before
+@@ -70,21 +127,38 @@ def _validate_java_options(options):
+                 f&#34;reference: {flag!r} (CVE-2026-12841, CWE-88).&#34;
+             )
+ 
+-        # Allow -Dkey=value system properties. The prefix is always
+-        # uppercase -D in valid usage; check the original flag.
+-        if flag.startswith(&#34;-D&#34;) and &#34;=&#34; in flag:
++        # --add-modules &lt;modules&gt;  (two tokens) or  --add-modules=&lt;modules&gt;.
++        if n == &#34;--add-modules&#34;:
++            mods = opts[i + 1] if i + 1 &lt; len(opts) else None
++            if not isinstance(mods, str) or not _MODULE_LIST_RE.match(mods):
++                raise ValueError(
++                    f&#34;--add-modules must be followed by a plain module list, got &#34;
++                    f&#34;{mods!r} (CVE-2026-12841, CWE-88).&#34;
++                )
++            i += 2
++            continue
++        if n.startswith(&#34;--add-modules=&#34;):
++            if not _MODULE_LIST_RE.match(flag.split(&#34;=&#34;, 1)[1]):
++                raise ValueError(
++                    f&#34;--add-modules has a non-module-list value: {flag!r} &#34;
++                    &#34;(CVE-2026-12841, CWE-88).&#34;
++                )
++            i += 1
+             continue
+ 
+         if n in _SAFE_JVM_EXACT:
++            i += 1
+             continue
+ 
+         if n.startswith(_SAFE_JVM_PREFIXES):
++            i += 1
+             continue
+ 
+         raise ValueError(
+             f&#34;java_options contains a disallowed JVM/launcher flag: {flag!r}. &#34;
+-            &#34;Only JVM memory-tuning and safe runtime flags are permitted &#34;
+-            &#34;(CVE-2026-12841, CWE-88).&#34;
++            &#34;Only JVM memory/stack tuning, -verbose, -server/-client and &#34;
++            &#34;--add-modules are permitted; pass anything else through &#34;
++            &#34;java(trusted_raw_options=...) (CVE-2026-12841, CWE-88).&#34;
+         )
+ 
+ 
+@@ -209,4 +297,10 @@ def java(
+         if isinstance(options, str):
+             options = options.split()
+         java_options = list(options)
++        # Per-call options reach subprocess.Popen directly, so they must be
++        # validated too -- config_java() alone is not enough (CVE-2026-12841,
++        # CWE-88). Without this a caller-supplied -jav</pre>
+</details>
+<p><b>Fix</b> : The patch significantly tightens the allowlist for JVM arguments, explicitly removing `-XX:` and `-D` prefixes, which were previously allowed. It also adds new validation checks for unsafe characters and ensures that per-call options are also subjected to the same strict validation as global options, preventing the bypass of the original fix.</p>
+<p>
+<a href="https://github.com/advisories/GHSA-m4rf-3fr8-xwx3">Advisory</a> · <a href="https://github.com/nltk/nltk/commit/8fa9650b6009aacfdebbc33d2a08d32c0858ea6c">Commit</a>
+</p>
+<hr>
 <h3>GHSA-73mf-m39p-wpm9</h3>
 <p>
 <code>CRITICAL 9.8</code> · 2026-08-28 · Java<br>
@@ -1204,7 +1346,7 @@
 <h3>GHSA-jrw6-7x4q-w25j</h3>
 <p>
 <code>CRITICAL 9.8</code> · 2026-08-26 · Python<br>
-<code>senaite.core</code> · Pattern: <code>UNSANITIZED_INPUT→COMMAND</code> · 85x across ecosystem
+<code>senaite.core</code> · Pattern: <code>UNSANITIZED_INPUT→COMMAND</code> · 87x across ecosystem
 </p>
 <p><b>Root cause</b> : The application used Python&#39;s `eval()` function to parse stringified record values from user-controlled input. The `eval()` function executes arbitrary Python code, making it highly dangerous when used with untrusted input.</p>
 <p><b>Impact</b> : An attacker could achieve arbitrary code execution on the server, leading to full system compromise, data exfiltration, or denial of service.</p>
@@ -1227,7 +1369,7 @@
 <h3>GHSA-mw6r-2hvm-4rp2</h3>
 <p>
 <code>CRITICAL 9.8</code> · 2026-08-25 · Python<br>
-<code>qwed-mcp</code> · Pattern: <code>UNSANITIZED_INPUT→COMMAND</code> · 85x across ecosystem
+<code>qwed-mcp</code> · Pattern: <code>UNSANITIZED_INPUT→COMMAND</code> · 87x across ecosystem
 </p>
 <p><b>Root cause</b> : The application used SymPy&#39;s `parse_expr()` function to evaluate user-supplied mathematical expressions without sufficient sanitization or a restricted execution environment. This allowed attackers to inject arbitrary Python code, which `parse_expr()` would then execute.</p>
 <p><b>Impact</b> : An attacker could execute arbitrary Python code on the server, leading to full system compromise, data exfiltration, or denial of service.</p>
@@ -1292,7 +1434,7 @@
 <h3>GHSA-w3fx-mc44-mf6j</h3>
 <p>
 <code>CRITICAL 9.8</code> · 2026-08-25 · Python<br>
-<code>chainlit</code> · Pattern: <code>UNSANITIZED_INPUT→COMMAND</code> · 85x across ecosystem
+<code>chainlit</code> · Pattern: <code>UNSANITIZED_INPUT→COMMAND</code> · 87x across ecosystem
 </p>
 <p><b>Root cause</b> : The application allowed user-controlled input to be directly executed as a command via `shlex.split` without sufficient validation of the executable itself. While it attempted to restrict executables, an attacker could craft a command string that bypassed these checks, leading to arbitrary command execution.</p>
 <p><b>Impact</b> : An unauthenticated attacker could achieve remote code execution on the server, gaining full control over the system where Chainlit is running.</p>
@@ -1559,7 +1701,7 @@
 <h3>GHSA-mmj4-63m4-r6h5</h3>
 <p>
 <code>CRITICAL 9.8</code> · 2026-08-07 · PHP<br>
-<code>codeigniter4/framework</code> · Pattern: <code>UNCLASSIFIED</code> · 507x across ecosystem
+<code>codeigniter4/framework</code> · Pattern: <code>UNCLASSIFIED</code> · 516x across ecosystem
 </p>
 <p><b>Root cause</b> : The vulnerability existed because the file validation rules `is_image` and `mime_in` in CodeIgniter only checked the detected MIME type or the file&#39;s actual content type, but did not adequately validate the client-provided file extension against the actual content or expected image types. This allowed an attacker to upload malicious files with a misleading extension (e.g., a PHP script disguised as an image) if the server relied solely on these rules.</p>
 <p><b>Impact</b> : An attacker could bypass file upload restrictions, potentially uploading malicious scripts (e.g., PHP web shells) to the server. If these files were then accessible and executable, it could lead to Remote Code Execution (RCE) on the server, allowing the attacker to take full control.</p>
@@ -1720,7 +1862,7 @@
 <h3>GHSA-px5m-h76g-p7p8</h3>
 <p>
 <code>CRITICAL 9.8</code> · 2026-07-09 · PHP<br>
-<code>yeswiki/yeswiki</code> · Pattern: <code>UNSANITIZED_INPUT→COMMAND</code> · 85x across ecosystem
+<code>yeswiki/yeswiki</code> · Pattern: <code>UNSANITIZED_INPUT→COMMAND</code> · 87x across ecosystem
 </p>
 <p><b>Root cause</b> : The application used `eval()` on user-supplied input for a formula calculator. While there was a regular expression to validate the formula, it was insufficient to prevent malicious code injection, allowing an attacker to execute arbitrary PHP code.</p>
 <p><b>Impact</b> : An attacker could achieve full remote code execution on the server, leading to complete compromise of the application and underlying system, as well as denial of service.</p>
@@ -1748,31 +1890,6 @@
 <p><b>Fix</b> : The `eval()` function has been removed. The application now uses a custom-built parser and evaluator for mathematical formulas, which tokenizes the input and processes it through a defined set of allowed operations and functions, preventing arbitrary code execution.</p>
 <p>
 <a href="https://github.com/advisories/GHSA-px5m-h76g-p7p8">Advisory</a> · <a href="https://github.com/YesWiki/yeswiki/commit/dd2bd8fb099de0d21504bda8a810693b3fcb8e52">Commit</a>
-</p>
-<hr>
-<h3>GHSA-2gr4-ppc7-7mhx</h3>
-<p>
-<code>CRITICAL 9.8</code> · 2026-06-11 · PHP<br>
-<code>codeigniter4/framework</code> · Pattern: <code>UNCLASSIFIED</code> · 507x across ecosystem
-</p>
-<p><b>Root cause</b> : The vulnerability existed because the `ext_in` validation rule only checked the guessed file extension, which could be manipulated by an attacker. The `guessExtension()` method might return an empty string or an incorrect extension if the file&#39;s MIME type or content was malformed, allowing a malicious file with a dangerous extension (e.g., .php) to bypass the intended extension whitelist.</p>
-<p><b>Impact</b> : An attacker could upload files with disallowed extensions, potentially leading to remote code execution if the server is configured to execute scripts based on their extension, or other forms of system compromise.</p>
-<details>
-<summary>Diff</summary>
-<pre lang="diff">-            if (! in_array($file-&gt;guessExtension(), $params, true)) {
-+            $clientExtension = strtolower($file-&gt;getClientExtension());
-+
-+            if ($clientExtension === &#39;&#39; || ! in_array($clientExtension, $params, true)) {
-+                return false;
-+            }
-+
-+            if ($file-&gt;guessExtension() !== $clientExtension) {
-                 return false;
-             }</pre>
-</details>
-<p><b>Fix</b> : The patch enhances the `ext_in` validation rule by explicitly checking both the client-provided file extension (`getClientExtension()`) and comparing it with the guessed extension (`guessExtension()`). It ensures that the client extension is not empty and is part of the allowed list, and that the guessed extension matches the client extension, preventing bypasses through manipulated file types.</p>
-<p>
-<a href="https://github.com/advisories/GHSA-2gr4-ppc7-7mhx">Advisory</a> · <a href="https://github.com/codeigniter4/CodeIgniter4/commit/29299349e7d232e9532767c7cefaed30957309be">Commit</a>
 </p>
 <hr>
 <h2 id="how-it-works">How it works</h2>
@@ -1810,10 +1927,10 @@
 <summary>Stats</summary>
 <table>
 <tr><th>Metric</th><th>Value</th></tr>
-<tr><td>Total advisories</td><td>1742</td></tr>
+<tr><td>Total advisories</td><td>1766</td></tr>
 <tr><td>Unique patterns</td><td>50</td></tr>
 <tr><td>Pending</td><td>24</td></tr>
-<tr><td>Last updated</td><td>2026-09-01</td></tr>
+<tr><td>Last updated</td><td>2026-09-02</td></tr>
 </table>
 </details>
 <hr>
